--- a/PUFcpp-int/CMakeLists.txt
+++ b/PUFcpp-int/CMakeLists.txt
@@ -3,5 +3,5 @@ project(PUFcpp_int)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Tools.cpp BCH.cpp)
+set(SOURCE_FILES main2.cpp Tools.cpp BCH.cpp)
 add_executable(PUFcpp_int ${SOURCE_FILES})
